test_regress/t/t_math_wide_bad.out
%Error-UNSUPPORTED: test.v:34:19: Unsupported: operator ISTORD operator of 64 bits exceeds hardcoded limit VL_MULS_MAX_WORDS in verilatedos.h
   34 |    assign r = real'(a);
      |                   ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=5.037
%Error-UNSUPPORTED: test.v:28:18: Unsupported: operator POWSS operator of 5472 bits exceeds hardcoded limit VL_MULS_MAX_WORDS in verilatedos.h
   28 |    assign z2 = a ** 3;
      |                  ^~
%Error-UNSUPPORTED: test.v:27:17: Unsupported: operator MULS operator of 5472 bits exceeds hardcoded limit VL_MULS_MAX_WORDS in verilatedos.h
   27 |    assign z = a * b;
      |                 ^
%Error-UNSUPPORTED: test.v:29:18: Unsupported: operator DIVS operator of 5472 bits exceeds hardcoded limit VL_MULS_MAX_WORDS in verilatedos.h
   29 |    assign z3 = a / b;
      |                  ^
%Error-UNSUPPORTED: test.v:30:18: Unsupported: operator MODDIVS operator of 5472 bits exceeds hardcoded limit VL_MULS_MAX_WORDS in verilatedos.h
   30 |    assign z4 = a % b;
      |                  ^
%Error-UNSUPPORTED: test.v:31:19: Unsupported: operator DIV operator of 5472 bits exceeds hardcoded limit VL_MULS_MAX_WORDS in verilatedos.h
   31 |    assign z5 = ua / ub;
      |                   ^
%Error-UNSUPPORTED: test.v:32:19: Unsupported: operator MODDIV operator of 5472 bits exceeds hardcoded limit VL_MULS_MAX_WORDS in verilatedos.h
   32 |    assign z6 = ua % ub;
      |                   ^
%Error: Exiting due to 7 error(s)
